--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 </head>
 
 <body>
+  <div id="myData"></div>
+  <script type="text/javascript">
+    fetch('list.json')
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (data) {
+            appendData(data);
+        })
+        .catch(function (err) {
+            console.log('error: ' + err);
+        });
+
+    function appendData(data) {
+        let mainContainer = document.getElementById("myData");
+        for (let i = 0; i < data.length; i++) {
+            let div = document.createElement("div");
+            div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName;
+            mainContainer.appendChild(div);
+        }
+    }
+  </script>
 </body>
 
 </html>
