--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="myData"></div>
   <script type="text/javascript">
-    fetch('list.json')
+    fetch('./list.json')
         .then(function (response) {
             return response.json();
         })
